# lib_coffee_machine

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docker/: docker-compose.yml
include/lib_coffee_machine/: coffee_machine.h  common.h  default_configuration.h  display.h  interfaces.h  relay_controller.h  serial_interface.h
include/lib_coffee_machine/default/: configuration.h  pid.h
scripts/: install.sh  test-project.sh
tests/: CMakeLists.txt  common_test.h  test_custom_display.cpp  test_moving_average.cpp  test_safety_temperature.cpp  test_safety_timeouts.cpp  test_serial_interface.cpp  test_temperature_controller.cpp  test_temperature_sensors.cpp
tests/mock/: mock_display.h  test_adapter.h
